--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -10,15 +10,15 @@ TERM = "xterm-256color"
 # opacity = 0.9
 
 [font]
-size = 12.0
+size = 11.0
 
 [font.normal]
 family = "Fira Code"
 style = "Regular"
 
-[font.bold]
-family = "Fira Code"
-style = "Bold"
+# [font.bold]
+# family = "Fira Code"
+# style = "Bold"
 
 [font.italic]
 family = "Fira Code"
