--- a/i3/config
+++ b/i3/config
@@ -27,7 +27,7 @@ exec --no-startup-id picom
 # exec_always --no-startup-id killall polybar
 exec_always --no-startup-id polybar toph
 # exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
-exec_always feh --bg-scale ~/.config/bgs/beaut.jpg
+exec_always feh --bg-scale ~/.config/bgs/beaut.png
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
