Add waybar, hypr utils etc

--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -5,9 +5,9 @@ bind = $mainMod, F, togglefloating
 
 # Actions
 bind = $mainMod, X, killactive
-bind = $mainMod, Z, exit
+bind = $mainMod, Z, exec, ~/.config/hypr/scripts/hypr_exit.sh
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, togglesplit, # dwindle
 
 bind = $mainMod, space, exec, $terminal
 bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
