--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -4,7 +4,6 @@
 
 monitor=,preferred,auto,auto
 
-
 ##################
 #### PROGRAMS ####
 ##################
@@ -13,16 +12,14 @@ monitor=,preferred,auto,auto
 $terminal = alacritty
 $fileManager = dolphin
 $launcher = rofi -show run
-# $menu = wofi --show drun
 
 #################
 ### AUTOSTART ###
 #################
 
 exec-once = hyprpaper
-exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = nm-applet & waybar &
+exec-once = hypridle
 
 #############################
 ######## ENVIRONMENT ########
@@ -33,8 +30,8 @@ env = XDG_SESSION_DESKTOP, Hyprland
 env = XDG_QPA_PLATFORM, wayland
 env = MOZ_ENABLE_WAYLAND, 1
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,18
+env = HYPRCURSOR_SIZE,18
 
 
 #####################
