--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -9,6 +9,10 @@ TERM = "xterm-256color"
 [window]
 opacity = 0.7
 
+[window.padding]
+x = 2
+y = 7
+
 [font]
 size = 11.0
 
@@ -16,9 +20,9 @@ size = 11.0
 family = "Fira Code"
 style = "Regular"
 
-# [font.bold]
-# family = "Fira Code"
-# style = "Bold"
+[font.bold]
+family = "Fira Code"
+style = "Bold"
 
 [font.italic]
 family = "Fira Code"
