Add system controls to hyprland

--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -5,21 +5,42 @@ bind = $mainMod, F, togglefloating
 
 # Actions
 bind = $mainMod, X, killactive
-bind = $mainMod, Z, exec, ~/.config/hypr/scripts/hypr_exit.sh
+bind = $mainMod, Z, exit
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
+bind = $mainMod, E, exec, $fileManager
 
+# Launch
 bind = $mainMod, space, exec, $terminal
 bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
 bind = $mainMod, D, exec, $launcher
 bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
-# bind = $mainMod, E, exec, $fileManager
+bind = $mainMod SHIFT, B, exec, $bluetooth
+
+# System controls
+binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
+binde = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
+bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde = , XF86MonBrightnessUp, exec, brightnessctl --class=backlight set +5%
+binde = , XF86MonBrightnessDown, exec, brightnessctl --class=backlight set 5%-
 
 # Move focus with vim keybindings
 bind = $mainMod, h, movefocus, l
 bind = $mainMod, l, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, j, movefocus, d
+
+# Switch windows
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, K, movewindow, u
+bind = $mainMod SHIFT, J, movewindow, d
+
+# Resize windows
+bind = $mainMod SHIFT, right, resizeactive, 10 0
+bind = $mainMod SHIFT, left, resizeactive, -10 0
+bind = $mainMod SHIFT, up, resizeactive, 0 -10
+bind = $mainMod SHIFT, down, resizeactive, 0 10
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
