--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,17 +1,16 @@
+# variables to use later
+$terminal = alacritty
+$fileManager = thunar
+$launcher = rofi -show drun
+$icon_theme = Papirus
+$bluetooth = blueman-manager
+
+
 ################
 ### MONITORS ###
 ################
 
 monitor=,preferred,auto,auto
-
-##################
-#### PROGRAMS ####
-##################
-
-# $terminal = kitty
-$terminal = alacritty
-$fileManager = dolphin
-$launcher = rofi -show run
 
 #################
 ### AUTOSTART ###
@@ -135,13 +134,4 @@ source = ~/.config/hypr/hyprkeys.conf
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-# See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-# See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
-
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+source = ~/.config/hypr/windowrules.conf
