--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -17,10 +17,8 @@
     "custom/arch": {
         "format": "  ",
         "tooltip": false
-        // "on-click": "sh $HOME/.config/rofi/bin/powermenu"
     },
     "hyprland/workspaces": {
-        // "format": "{name}",
         "format": "{icon}",
         "tooltip": false,
         "all-outputs": true,
@@ -30,11 +28,11 @@
         }
     },
     "clock": {
-        "format": "<span color='#b4befe'> </span>{:%H:%M}"
+        "format": "<span color='#11111b'> </span>{:%H:%M}"
     },
     "backlight": {
         "device": "intel_backlight",
-        "format": "<span color='#b4befe'>{icon}</span> {percent}%",
+        "format": "<span color='#11111b'>{icon}</span> {percent}%",
         "format-icons": [
             "",
             "",
@@ -48,7 +46,7 @@
         ]
     },
     "pulseaudio": {
-        "format": "<span color='#b4befe'>{icon}</span> {volume}%",
+        "format": "<span color='#11111b'>{icon}</span> {volume}%",
         "format-muted": "",
         "tooltip": false,
         "format-icons": {
@@ -67,16 +65,16 @@
         "scroll-step": 1
     },
     "bluetooth": {
-        "format": "<span color='#b4befe'></span> {status}",
+        "format": "<span color='#11111b'></span> {status}",
         "format-disabled": "", // an empty format will hide the module
-        "format-connected": "<span color='#b4befe'></span> {num_connections}",
+        "format-connected": "<span color='#11111b'></span> {num_connections}",
         "tooltip-format": "{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}   {device_address}"
     },
     "network": {
         "format": "{ifname}",
-        "format-wifi": " ",
-        "format-disconnected": "<span color='#b4befe'>󰖪 </span>No Network",
+        "format-wifi": "<span color='#000000'> </span>",
+        "format-disconnected": "<span color='#000000'>󰖪 </span>No Network",
         "tooltip-format": "{ifname} {essid} via {gwaddr} ",
         "max-length": 50
     },
