--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -16,6 +16,7 @@ bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_
 bind = $mainMod, D, exec, $launcher
 bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
 bind = $mainMod SHIFT, B, exec, $bluetooth
+bind = $mainMod SHIFT, F, exec, $browser
 
 # System controls
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
@@ -37,10 +38,13 @@ bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, J, movewindow, d
 
 # Resize windows
-bind = $mainMod SHIFT, right, resizeactive, 10 0
-bind = $mainMod SHIFT, left, resizeactive, -10 0
-bind = $mainMod SHIFT, up, resizeactive, 0 -10
-bind = $mainMod SHIFT, down, resizeactive, 0 10
+binde = $mainMod SHIFT, right, resizeactive, 10 0
+binde = $mainMod SHIFT, left, resizeactive, -10 0
+binde = $mainMod SHIFT, up, resizeactive, 0 -10
+binde = $mainMod SHIFT, down, resizeactive, 0 10
+
+# Move floating windows
+bindm = $mainMod, mouse:272, movewindow
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -53,6 +57,8 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+bind = $mainMod, TAB, workspace, previous
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = $mainMod SHIFT, 1, movetoworkspace, 1
