--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,8 +1,9 @@
 # variables to use later
 $terminal = alacritty
-$fileManager = thunar
+$browser = firefox
 $launcher = rofi -show drun
 $icon_theme = Papirus
+$fileManager = thunar
 $bluetooth = blueman-manager
 
 
@@ -10,13 +11,16 @@ $bluetooth = blueman-manager
 ### MONITORS ###
 ################
 
-monitor=,preferred,auto,auto
+monitor= , preferred, auto, 1
 
 #################
 ### AUTOSTART ###
 #################
 
 exec-once = hyprpaper
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = systemctl --user import-environment
+exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet & waybar &
 exec-once = hypridle
 
@@ -30,7 +34,7 @@ env = XDG_QPA_PLATFORM, wayland
 env = MOZ_ENABLE_WAYLAND, 1
 
 env = XCURSOR_SIZE,18
-env = HYPRCURSOR_SIZE,18
+env = HYPRCURSOR_SIZE, 20
 
 
 #####################
@@ -38,8 +42,8 @@ env = HYPRCURSOR_SIZE,18
 #####################
 
 general {
-    border_size = 2
-    gaps_in = 7
+    border_size = 3
+    gaps_in = 5
     gaps_out = 10
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
@@ -52,18 +56,23 @@ decoration {
     rounding = 8
     active_opacity = 1.0
     inactive_opacity = 1.0
-    drop_shadow = true
-    shadow_range = 8
-    shadow_render_power = 2
-    col.shadow = rgba(1a1a1aee)
-    shadow_offset = 2 2
+    # drop_shadow = true
+    # shadow_range = 8
+    # shadow_render_power = 2
+    # col.shadow = rgba(1a1a1aee)
+    # shadow_offset = 2 2
 
+    # blur {
+    #     enabled = true
+    #     size = 3
+    #     passes = 2
+    #     vibrancy = 0.1696
+    # }
     blur {
-        enabled = true
-        size = 3
-        passes = 2
-        vibrancy = 0.1696
+        enabled = false
     }
+
+    drop_shadow = false
 }
 
 #############
@@ -109,12 +118,13 @@ dwindle {
 }
 
 master {
-    new_is_master = true
+    new_status = true
 }
 
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
+    vfr = true
 }
 
 device {
