--- a/i3/config
+++ b/i3/config
@@ -25,7 +25,7 @@ font pango:Fira Code Regular 13
 exec --no-startup-id picom
 
 # exec_always --no-startup-id killall polybar
-exec_always --no-startup-id polybar toph
+# exec_always --no-startup-id polybar toph
 # exec_always --no-startup-id ~/.config/polybar/launch_polybar.sh
 exec_always feh --bg-scale ~/.config/bgs/beaut.png
 # Start XDG autostart .desktop files using dex. See also
@@ -58,14 +58,14 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec alacritty
+bindsym $mod+space exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
-bindsym $mod+space exec rofi -show combi
+# bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec rofi -show combi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -195,9 +195,9 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#         status_command i3status
-# }
+bar {
+        status_command i3status
+}
 
 set $rosewater #f5e0dc
 set $flamingo #f2cdcd
