--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -4,10 +4,10 @@ general {
     after_sleep_cmd = hyprctl dispatch dpms on
 }
 
-# turn off keyboard backlight after 2.5 mins of inactivity
+# turn off keyboard backlight after 1.5 mins of inactivity
 listener {
-    timeout = 150                                          # 2.5min.
-    on-timeout = brightnessctl -sd dell::kbd_backlight set 0 # turn off keyboard backlight.
+    timeout = 90
+    on-timeout = brightnessctl -sd dell::kbd_backlight set 0
     on-resume = brightnessctl -rd dell::kbd_backlight        # turn on keyboard backlight.
 }
 
@@ -24,9 +24,9 @@ listener {
     on-timeout = loginctl lock-session
 }
 
-# turn off screen after 7 mins of inactivity
+# turn off screen after 6 mins of inactivity
 listener {
-    timeout = 420
+    timeout = 360
     on-timeout = hyprctl dispatch dpms off
     on-resume = hyprctl dispatch dpms on
 }
