--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -5,6 +5,6 @@ fading = true;
 inactive-opacity = 1;
 active-opacity = 1;
 
-opacity-rule = [
-    "90:class_g = 'Alacritty'",
-];
+# opacity-rule = [
+#     "90:class_g = 'Alacritty'",
+# ];
