--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -12,7 +12,9 @@ bind = $mainMod, E, exec, $fileManager
 
 # Launch
 bind = $mainMod, space, exec, $terminal
-bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
+# bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
+bind = CTRL ALT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots
+bind = CTRL ALT, N, exec, hyprshot -m window -o ~/Pictures/Screenshots
 bind = $mainMod, D, exec, $launcher
 bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
 bind = $mainMod SHIFT, B, exec, $bluetooth
