--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -20,8 +20,10 @@ monitor= , preferred, auto, 1
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment
+# exec-once = ags
 exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet & waybar &
+# exec-once = nm-applet &
 exec-once = hypridle
 
 #############################
@@ -72,7 +74,10 @@ decoration {
         enabled = false
     }
 
-    drop_shadow = false
+    shadow {
+        enabled = false
+    }
+
 }
 
 #############
