--- a/i3/config
+++ b/i3/config
@@ -31,6 +31,7 @@ exec_always feh --bg-scale ~/.config/bgs/beaut.png
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+# exec --no-startup-id parcellite
 
 # The combination of xss-lock, nm-applet and pactl is a popular choice, so
 # they are included here as an example. Modify as you see fit.
@@ -42,6 +43,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
+exec --no-startup-id xmodmap ~/.dotfiles/i3/swapkeys -display :0
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -61,7 +63,8 @@ tiling_drag modifier titlebar
 bindsym $mod+space exec alacritty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+# bindsym $mod+Shift+q kill
+bindsym $mod+x kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec --no-startup-id dmenu_run
@@ -71,6 +74,8 @@ bindsym $mod+d exec rofi -show combi
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
+bindsym $mod+Ctrl+s exec grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
 
 # change focus
 bindsym $mod+h focus left
@@ -91,7 +96,7 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Left resize grow width 1 px or 1 ppt
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
@@ -121,6 +126,10 @@ bindsym $mod+p focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
+
+# default_orientation vertical
+for_window [class=".*"] split toggle
+
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
@@ -165,6 +174,8 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+z exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+
+bindsym $mod+Shift+f exec "firefox"
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
