--- a/hypr/windowrules.conf
+++ b/hypr/windowrules.conf
@@ -1,3 +1,4 @@
 windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float, class:($fileManager)
 windowrulev2 = float, class:($bluetooth)
+windowrulev2 = float, class:^(Emulator)$
