Better waybar and tmux

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -7,14 +7,6 @@ unbind C-s
 set -g prefix C-s
 bind C-s send-prefix
 
-set -sg escape-time 50
-set -g renumber-windows on
-
-# status bar
-set -g status-position top
-# set -g status-style 'bg=#333333 fg=#5eacd3'
-# set -g status-right 'CPU #{cpu_icon} #{cpu_percentage} | %a %h-%d %H:%M '
-
 # terminal
 set -g default-terminal "${TERM}"
 set -ga terminal-overrides ",*256col*:Tc"
@@ -23,52 +15,44 @@ set -g default-terminal "screen-256color"
 # guicursor flow
 set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
 
+set -sg escape-time 50
+set -g renumber-windows on
+set -g base-index 1
+
+# status bar
+set -g status-style 'bg=#333333 fg=#5eacd3'
+set -g status-right ""
+
+# pane borders
+# set -g pane-active-border-style 'fg=magenta,bg=default'
+set -g pane-border-style 'fg=brightblack,bg=default'
+
 # windows splits
 bind | split-window -hc "#{pane_current_path}"
 bind - split-window -vc "#{pane_current_path}"
 
-# coz vim motions are the best
+# vim like pane switching
 setw -g mode-keys vi
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# pane borders
-set -g pane-active-border-style 'fg=magenta,bg=default'
-set -g pane-border-style 'fg=brightblack,bg=default'
+# set-window-option -g mode-keys vi
+# bind -T copy-mode-vi v send-keys -X begin-selection
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy -in -selection clipboard'
+
+set-option -s set-clipboard off
+bind P paste-buffer
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
+unbind -T copy-mode-vi Enter
+set-window-option -g mode-keys vi
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl-copy'
 
 # swapping windows
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
 bind-key m last-window
-
-set -g @plugin 'catppuccin/tmux'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-
-
-# status bar styling
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_status_middle_separator "█"
-set -g @catppuccin_window_number_position "left"
-
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
-
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
-
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_status_modules_left "session"
-set -g @catppuccin_status_modules_right "directory cpu"
-set -g @catppuccin_directory_text "#{b:pane_current_path}"
-set -g @catppuccin_cpu_color "#67c4e6"
-
-run '~/.tmux/plugins/tpm/tpm'
