Nvim config rewrite

--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -21,8 +21,10 @@ bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, F, exec, $browser
 
 # System controls
-binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%+
-binde = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.4 @DEFAULT_AUDIO_SINK@ 5%-
+binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.8 @DEFAULT_AUDIO_SINK@ 5%+
+binde = , XF86AudioLowerVolume, exec, wpctl set-volume -l 1.8 @DEFAULT_AUDIO_SINK@ 5%-
+bind = CTRL ALT, H, exec, wpctl set-volume -l 1.8 @DEFAULT_AUDIO_SINK@ 5%+
+bind = CTRL ALT, L, exec, wpctl set-volume -l 1.8 @DEFAULT_AUDIO_SINK@ 5%-
 bind = , XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 binde = , XF86MonBrightnessUp, exec, brightnessctl --class=backlight set +5%
 binde = , XF86MonBrightnessDown, exec, brightnessctl --class=backlight set 5%-
