--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -5,7 +5,7 @@
         "custom/arch",
         "hyprland/workspaces"
     ],
-    "modules-center": [],
+    // "modules-center": [],
     "modules-right": [
         "custom/left-arrow-dark",
         "memory",
@@ -21,6 +21,8 @@
         "custom/left-arrow-light",
         "custom/left-arrow-dark",
         "network",
+        "bluetooth",
+        "custom/left-arrow-light",
         "custom/left-arrow-dark",
         "clock#1",
         "custom/left-arrow-light",
@@ -60,10 +62,6 @@
             "default": ""
         }
     },
-    // "clock": {
-    //     // "format": "<span color='#11111b'> </span>{:%H:%M}"
-    //     "format": " {:%H:%M}"
-    // },
     "clock#1": {
         "format": "{:%a}",
         "tooltip": false
@@ -73,12 +71,11 @@
         "tooltip": false
     },
     "clock#3": {
-        "format": "{:%m-%d}",
+        "format": "{:%d-%m}",
         "tooltip": false
     },
     "backlight": {
         "device": "intel_backlight",
-        // "format": "<span color='#11111b'>{icon}</span> {percent}%",
         "format": "{icon} {percent}%",
         "format-icons": [
             "",
@@ -93,7 +90,6 @@
         ]
     },
     "pulseaudio": {
-        // "format": "<span color='#11111b'>{icon}</span> {volume}%",
         "format": "{icon} {volume}%",
         "format-muted": "",
         "tooltip": false,
@@ -113,18 +109,14 @@
         "scroll-step": 5
     },
     "bluetooth": {
-        // "format": "<span color='#11111b'></span> {status}",
         "format": " {status}",
         "format-disabled": "", // an empty format will hide the module
-        // "format-connected": "<span color='#11111b'></span> {num_connections}",
         "format-connected": " {num_connections}",
         "tooltip-format": "{device_enumerate}",
         "tooltip-format-enumerate-connected": "{device_alias}   {device_address}"
     },
     "network": {
         "format": "{ifname}",
-        // "format-wifi": "<span color='#000000'> </span>",
-        // "format-disconnected": "<span color='#000000'>󰖪 </span>No Network",
         "format-wifi": " ",
         "format-disconnected": "󰖪 No Network",
         "tooltip-format": "{ifname} {essid} via {gwaddr} ",
