--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -25,6 +25,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet & waybar &
 # exec-once = nm-applet &
 exec-once = hypridle
+exec-once = sudo keyd
 
 #############################
 ######## ENVIRONMENT ########
