More LSPs, swaync, cleanup starship

--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -9,12 +9,13 @@ bind = $mainMod, Z, exit
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, N, exec, swaync-client -t
 
 # Launch
 bind = $mainMod, space, exec, $terminal
 # bind = CTRL ALT, S, exec, grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +'%s_grim.png')
 bind = CTRL ALT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots
-bind = CTRL ALT, N, exec, hyprshot -m window -o ~/Pictures/Screenshots
+bind = CTRL ALT, W, exec, hyprshot -m window -o ~/Pictures/Screenshots
 bind = $mainMod, D, exec, $launcher
 bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
 bind = $mainMod SHIFT, B, exec, $bluetooth
