--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,17 +1,12 @@
+[general]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
+
 [env]
 TERM = "xterm-256color"
 
-[general]
-import = [
-    "~/.config/alacritty/catppuccin-mocha.toml"
-]
-
 [window]
+padding = { x = 2, y = 7 }
 opacity = 0.92
-
-[window.padding]
-x = 2
-y = 7
 
 [font]
 size = 14.2
