--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,7 +11,7 @@ $bluetooth = blueman-manager
 ### MONITORS ###
 ################
 
-monitor= , preferred, auto, 1
+monitor = eDP-1, 1920x1200@60, 0x0, 1
 
 #################
 ### AUTOSTART ###
@@ -20,12 +20,12 @@ monitor= , preferred, auto, 1
 exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment
-# exec-once = ags
 exec-once = wl-paste --watch cliphist store
 exec-once = nm-applet & waybar &
-# exec-once = nm-applet &
 exec-once = hypridle
 exec-once = sudo keyd
+exec-once = swaync
+exec-once = systemctl --user start hyprpolkitagent
 
 #############################
 ######## ENVIRONMENT ########
