--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -131,10 +131,10 @@ device {
 
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-source = ~/.config/hypr/hyprkeys.conf
+source = $XDG_CONFIG_HOME/hypr/hyprkeys.conf
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
 
-source = ~/.config/hypr/windowrules.conf
+source = $XDG_CONFIG_HOME/hypr/windowrules.conf
