--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/.config/bgs/beaut.png
-wallpaper = ,~/.config/bgs/beaut.png
+preload = $XDG_CONFIG_HOME/bgs/beaut.png
+wallpaper = ,$XDG_CONFIG_HOME/bgs/beaut.png
