--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -5,7 +5,7 @@ general {
 
 background {
     monitor =
-    path = $HOME/.config/bgs/surr.jpg
+    path = $XDG_CONFIG_HOME/bgs/surr.jpg
     blur_passes = 1
     contrast = 0.8916
     brightness = 0.8172
