rofi power menu

--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -5,7 +5,7 @@ bind = $mainMod, F, togglefloating
 
 # Actions
 bind = $mainMod, X, killactive
-bind = $mainMod, Z, exit
+# bind = $mainMod, Z, exit
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
 bind = $mainMod, E, exec, $fileManager
@@ -17,7 +17,7 @@ bind = $mainMod, space, exec, $terminal
 bind = CTRL ALT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots
 bind = CTRL ALT, W, exec, hyprshot -m window -o ~/Pictures/Screenshots
 bind = $mainMod, D, exec, $launcher
-bind = $mainMod, B, exec, ~/.config/waybar/launch.sh
+bind = $mainMod, Z, exec, $XDG_CONFIG_HOME/rofi/rofi-power-menu.sh
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, F, exec, $browser
 
