--- a/hypr/hyprkeys.conf
+++ b/hypr/hyprkeys.conf
@@ -7,17 +7,17 @@ bind = $mainMod, F, togglefloating
 bind = $mainMod, X, killactive
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, T, togglesplit, # dwindle
-bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, N, exec, swaync-client -t
 
 # Launch
 bind = $mainMod, space, exec, $terminal
-bind = CTRL ALT, S, exec, hyprshot -m region -o ~/Pictures/Screenshots
-bind = CTRL ALT, W, exec, hyprshot -m window -o ~/Pictures/Screenshots
 bind = $mainMod, D, exec, $launcher
-bind = $mainMod, Z, exec, $XDG_CONFIG_HOME/rofi/rofi-power-menu.sh
 bind = $mainMod SHIFT, B, exec, $bluetooth
 bind = $mainMod SHIFT, F, exec, $browser
+bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, N, exec, swaync-client -t
+bind = $mainMod, Z, exec, $XDG_CONFIG_HOME/rofi/rofi-power-menu.sh
+bind = CTRL ALT, S, exec, hyprshot -m region -o $XDG_PICTURES_DIR/Screenshots
+bind = CTRL ALT, W, exec, hyprshot -m window -o $XDG_PICTURES_DIR/Screenshots
 
 # System controls
 binde = , XF86AudioRaiseVolume, exec, wpctl set-volume -l 1.8 @DEFAULT_AUDIO_SINK@ 5%+
