--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,6 @@
 $terminal = alacritty
 $browser = firefox
 $launcher = rofi -show drun
-$icon_theme = Papirus
 $fileManager = thunar
 $bluetooth = blueman-manager
 
@@ -21,7 +20,7 @@ exec-once = hyprpaper
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment
 exec-once = wl-paste --watch cliphist store
-exec-once = nm-applet & waybar &
+exec-once = waybar
 exec-once = hypridle
 exec-once = swaync
 exec-once = systemctl --user start hyprpolkitagent
