fix hypr workspace gestures, cleanup some nvim stuff

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -88,8 +88,7 @@ input {
 }
 
 gestures {
-    workspace_swipe = true
-    workspace_swipe_fingers = 3
+    gesture = 3, horizontal, workspace
 }
 
 animations {
