update scripts, add sessionizer

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,6 @@
 # re-source config
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 # prefix
 unbind C-s
@@ -10,7 +10,7 @@ bind C-s send-prefix
 # terminal
 set -g default-terminal "${TERM}"
 set -ga terminal-overrides ",*256col*:Tc"
-set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
 
 # guicursor flow
 set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
