fix sessionizer and add keybinds for it

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,3 +56,5 @@ bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'wl
 bind -r "<" swap-window -d -t -1
 bind -r ">" swap-window -d -t +1
 bind-key m last-window
+
+bind-key f run "tmux neww sessionizer"
